tests/ui/g-route-controller-mismatch.stderr
error[E0271]: type mismatch resolving `<StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<6>, ()>>, StepNil> as RouteArmHead>::Controller == Role<2>`
 --> tests/ui/g-route-controller-mismatch.rs:7:13
  |
7 |     let _ = g::route(bad_arm, good_arm);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `2`, found `0`
  |
  = note: expected struct `Role<2>`
             found struct `Role<0>`
